# neuro-canvas

./: .flake8  .gitignore  README.md  neuro_paint.py  pyproject.toml  testing_server.py
.github/workflows/: test.yml
src/neuro_canvas/: __init__.py  __main__.py  actions.py  application.py  application_test.py  canvas.py  canvas_test.py  constants.py
src/neuro_canvas/actions/: __init__.py  _abc.py  background.py  brush.py  draw.py  layers.py  misc.py
src/neuro_canvas/config/: load.py  permissions.py  settings.py
src/neuro_canvas/schema/: config.schema.json
