[build-system]
requires = ["setuptools>=64,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-canvas"
version = "0.4.1"
description = "Neuro's Canvas - A drawing application"
authors = [{ name = "Kaya-Kaya" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "neuro_api~=2.0.0",
    "pygame~=2.6",
    "jsonschema~=4.23",
    "typing-extensions>=4.0.0; python_version < '3.12'"
]

[project.urls]
"Source" = "https://github.com/Kaya-Kaya/neuro_canvas"
"Bug Tracker" = "https://github.com/Kaya-Kaya/neuro_canvas/issues"

[project.scripts]
neuro-canvas = "neuro_canvas.application:start"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.2",
    "pytest-trio>=0.8.0",
]
